# neurosimo

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml  run-tests.sh
ansible/: install-docker.yml  install-neurosimo.yml  install-nvidia-container-toolkit.yml  install-nvidia-drivers-preempt-rt.yml  install-nvidia-drivers.yml  install-ros.yml
ansible/files/: .env.example  neurosimo-logs.service.j2  neurosimo.service.j2
front/: Dockerfile  package-lock.json  package.json
front/public/: electron.js  index.html  manifest.json  preload.js
front/src/: App.tsx  index.css
interfaces/neurosimo_eeg_interfaces/: CMakeLists.txt  package.xml
md/: getting-started.md  hardware-guide.md  installation-guide.md  topics.md
project_template/decider/: README.md  (+4 more)
ros2_ws/src/eeg/eeg_simulator/: CMakeLists.txt  Dockerfile  README.md
ros2_ws/src/eeg/eeg_simulator/src/: dataset_manager.cpp  dataset_manager.h  eeg_simulator.cpp  eeg_simulator.h
ros2_ws/src/interfaces/pipeline_interfaces/: CMakeLists.txt
ros2_ws/src/interfaces/pipeline_interfaces/action/: InitializeComponent.action  InitializeDecider.action  InitializePreprocessor.action  InitializePresenter.action
ros2_ws/src/interfaces/pipeline_interfaces/msg/: DecisionInfo.msg  DecisionTrace.msg  ExperimentState.msg  LogMessage.msg  LoopbackLatency.msg  PipelineLatency.msg  ProtocolRestInfo.msg  ProtocolStageInfo.msg  TimingLatency.msg  TriggerLoopbackLatency.msg
ros2_ws/src/interfaces/pipeline_interfaces/srv/: FinalizeDecider.srv  FinalizePreprocessor.srv  FinalizeStimulationTracer.srv  FinalizeTriggerTimer.srv  InitializeDecider.srv  InitializePreprocessor.srv  InitializePresenter.srv  InitializeProtocol.srv  InitializeStimulationTracer.srv  InitializeTriggerTimer.srv  RequestTimedTrigger.srv
ros2_ws/src/interfaces/system_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/interfaces/system_interfaces/action/: ManageSession.action  RunSession.action
ros2_ws/src/interfaces/system_interfaces/msg/: DataSourceState.msg  DiskStatus.msg  ExportDataType.msg  ExporterState.msg  GlobalConfig.msg  SessionConfig.msg  SessionState.msg  StreamerState.msg
ros2_ws/src/interfaces/system_interfaces/srv/: AbortSession.srv  GetSessionConfig.srv  StartRecording.srv  StopRecording.srv
ros2_ws/src/neurosimo_packages/pipeline/experiment_coordinator/: CMakeLists.txt  Dockerfile  README.md  package.xml
ros2_ws/src/neurosimo_packages/pipeline/experiment_coordinator/src/: experiment_coordinator.cpp  experiment_coordinator.h  protocol.h  protocol_loader.cpp  protocol_loader.h
ros2_ws/src/neurosimo_packages/system/project_manager/: Dockerfile  package.xml
ros2_ws/src/neurosimo_packages/system/project_manager/project_manager/: project_manager.py
ros2_ws/src/pipeline/experiment_coordinator/: CMakeLists.txt  Dockerfile  README.md  package.xml  ros_entrypoint.sh
ros2_ws/src/pipeline/experiment_coordinator/launch/: experiment_coordinator.launch.py
ros2_ws/src/pipeline/experiment_coordinator/src/: experiment_coordinator.cpp  experiment_coordinator.h  experiment_coordinator_node.cpp  protocol.h  protocol_loader.cpp
ros2_ws/src/pipeline/preprocessor/: CMakeLists.txt  Dockerfile  package.xml
ros2_ws/src/pipeline/preprocessor/launch/: preprocessor.launch.py
ros2_ws/src/pipeline/preprocessor/src/: cpp_bindings.cpp  preprocessor.cpp  preprocessor.h  preprocessor_wrapper.cpp  preprocessor_wrapper.h
ros2_ws/src/system/session_player/: Dockerfile  package.xml  ros_entrypoint.sh  setup.cfg  setup.py
ros2_ws/src/system/session_player/launch/: session_player.launch.py
ros2_ws/src/system/session_player/session_player/: session_player.py
ros2_ws/src/utils/filesystem_utils/: CMakeLists.txt  package.xml
ros2_ws/src/utils/filesystem_utils/include/filesystem_utils/: filesystem_utils.h
ros2_ws/src/utils/filesystem_utils/src/: filesystem_utils.cpp
ros2_ws/src/utils/inotify_utils/: CMakeLists.txt  package.xml
ros2_ws/src/utils/inotify_utils/include/inotify_utils/: inotify_watcher.h
ros2_ws/src/utils/inotify_utils/src/: inotify_watcher.cpp
ros2_ws/src/utils/module_utils/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/utils/module_utils/include/module_utils/: module_manager.h
ros2_ws/src/utils/module_utils/src/: module_manager.cpp
scratch/: create-test-project  create_test_project.sh  debug_connection.py  generate_random_data.py  neurone_simulator.py  reconfigure-git  record-raw-eeg
scripts/: build-electron-app  build-neurosimo  build-ros-interfaces  create-project  create-test-project  docker-compose-logs-localtime  generate_random_data.py  install-neurosimo  install-neurosimo-desktop  install.sh  instructions  log-neurosimo  neurone_simulator.py  neurosimo  restart-neurosimo
src/decider/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/decider/requirements/: mne.txt  science.txt
src/decider/src/: decider.cpp  decider.h  decider_wrapper.cpp  decider_wrapper.h  ring_buffer.h
src/eeg/eeg_replay/: CMakeLists.txt  Dockerfile  ros_entrypoint.sh  setup.cfg
src/eeg/eeg_replay/launch/: eeg_replay.launch.py
src/eeg/eeg_replay/src/: eeg_replay.cpp
src/eeg_replay/: CMakeLists.txt  Dockerfile  package.xml
src/eeg_replay/src/: eeg_replay.cpp  eeg_replay.h
src/recording_importer/: Dockerfile  package.xml  ros_entrypoint.sh  setup.cfg  setup.py
src/recording_importer/launch/: recording_importer.launch.py
src/recording_importer/recording_importer/: recording_importer.py
src/recording_importer/resource/: recording_importer
src/stimulation_tracer/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/stimulation_tracer/src/: stimulation_tracer.cpp  stimulation_tracer.h
src/trigger_simulator/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/trigger_simulator/include/: trigger_simulator.h
src/trigger_simulator/launch/: trigger_simulator.launch.py
src/trigger_simulator/src/: trigger_simulator.cpp
tests/: Dockerfile  README.md  pytest.ini  run-fingerprint-tests.sh  test_fingerprints.py
(+650 files in other folders)
