<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eeg_replay</name>
  <version>0.1.0</version>
  <description>EEG replay</description>
  <maintainer email="okahilak@gmail.com">Olli-Pekka Kahilakoski</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>eeg_interfaces</depend>
  <depend>pipeline_interfaces</depend>
  <depend>system_interfaces</depend>
  <depend>nlohmann_json</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
