<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>session_player</name>
  <version>0.1.0</version>
  <description>Project manager</description>
  <maintainer email="okahilak@gmail.com">Olli-Pekka Kahilakoski</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <depend>project_interfaces</depend>
  <depend>system_interfaces</depend>
  <depend>pipeline_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
