<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_manager</name>
  <version>0.1.0</version>
  <description>Project manager</description>
  <maintainer email="okahilak@gmail.com">Olli-Pekka Kahilakoski</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>

  <depend>mep_interfaces</depend>
  <depend>mtms_trial_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
